<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_view_help_pop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".HelpPop"
    tools:showIn="@layout/activity_help_pop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center|top"
            android:layout_margin="10dp"
            android:src="@drawable/undraw_chatting_2yvo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:text="@string/help_pop_tagline"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="5dp"

                >
<!--row 1   -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:background="@drawable/rec_round_border_primary">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/baseline_email_white_18dp" />



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/help_pop_email_sub_one"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                        android:textColor="?attr/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"

                        android:layout_weight="1"

                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:text="@string/help_pop_email_sub_two"


                        android:textColor="?attr/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
<!-- row 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:background="@drawable/rec_round_border_primary">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:src="@drawable/ic_contact_us_phone_pop" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"

                        android:layout_weight="1"
                        android:text="@string/help_pop_phone_sub_one"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="?attr/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"

                        android:layout_weight="1"

                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:text="@string/help_pop_phone_sub_two"

                        android:textColor="?attr/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>


            </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/action_help_pop_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/baseline_close_black_18dp"
        android:layout_marginRight="10dp"
        />
</RelativeLayout>